[tool.poetry]
name = "protomodel"
version = "0.0.7"
description = "Python Library to generate protobuffers code from python using type hints"
authors = ["Pablo España <pabloespanab@outlook.com>"]
readme = "README.md"
packages = [{include = "protomodel"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
protomodel = "protomodel.__main__:main"